--- a/contact.html
+++ b/contact.html
@@ -2,19 +2,28 @@
 <html>
 <head>
 	<title> "contact" </title>
-
-
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 
+
+<section id="nav">
+<!-- Header-->
+	<header>
 	<h1> Kevin Ding </h1>
-		<br>
+	
+<!--little thingy-->
+		
+			<a href= "index.html" class="button">About</a>
+			<a href="portfolio.html" class="button">Portfolio</a>
+			<a href="contact.html" class="button">Contact</a>
+		</section>
+	</header>
 
-			<a href="index.html" target="_blank">About</a>
-			<a href="portfolio.html" target="_blank">Portfolio</a>
-			<a href="contact.html" target="_blank">Contact</a>
+<br>
+<!--submitable dealies -->
 
-	<h2> Contact</h2>
+	<h3> Contact</h3>
  <br>
 	<form id="contact_form" action="#" method="POST" enctype="multipart/form-data">
 	
@@ -32,18 +41,22 @@
 	</div>
 		<input id="submit_button" type="submit" value="SUBMIT" />
 
-	</form>	
-
-<h3>CONNECT WITH ME</h3>	
-
-			<a href="#" target="_blank"><img src="assets/images/_Google-128.png">
-
-			<a href="#" target="_blank"><img src="assets/images/online_social_media_chrome-128.png">
-
-			<a href="#" target="_black"><img src="assets/images/line_color_mix-79-128.png">
+	</form>
 
 
+<!--connect-->
+<section id="connect">		
+			
+	<h3>CONNECT WITH ME</h3>	
+		
+			<a href="#"><img src="assets/images/_github-128.png" id="social-icon"></a>
 
+			<a href="#"><img src="assets/images/_linkedin-128.png" id="social-icon"></a>
+
+			<a href="#"><img src="assets/images/_youtube-128.png"  id="social-icon"></a>
+		
+			
+</section>
 
 	</body>		
 </body>
