--- a/portfolio.html
+++ b/portfolio.html
@@ -2,20 +2,29 @@
 <html>
 <head>
 	<title> "portfolio" </title>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
+<section id="nav">
 <!-- Header -->
 	<h1> Kevin Ding </h1>
-		<br>
+	
 <!--little thingy-->
-			<a href="index.html" target="_blank">About</a>
-			<a href="portfolio.html" target="_blank">Portfolio</a>
-			<a href="contact.html" target="_blank">Contact</a>
+		
+			<a href= "index.html" class="button">About</a>
+			<a href="portfolio.html" class="button">Portfolio</a>
+			<a href="contact.html" class="button">Contact</a>
+</section>
+
+
 
 <!-- connect-->
 	<h3>CONNECT WITH ME</h3>	
 
-			<a href="#" target="_blank"><img src="assets/images/_Google-128.png">
+				<a href="#"><img src="assets/images/_github-128.png" id="social-icon"></a>
 
-			<a href="#" target="_blank"><img src="assets/images/online_social_media_chrome-128.png">
+			<a href="#"><img src="assets/images/_linkedin-128.png" id="social-icon"></a>
 
-			<a href="#" target="_black"><img src="assets/images/line_color_mix-79-128.png">
+			<a href="#"><img src="assets/images/_youtube-128.png"  id="social-icon"></a>
+		
+
