--- a/index.html
+++ b/index.html
@@ -6,29 +6,48 @@
 	</head>
 
 	<body>
+<div class="container">
+
+	<section id="nav">
 		<!-- header-->
 			<h1> Kevin Ding </h1>
-		<br>
-<!--little thingy-->
-			<a href="index.html" target="_blank">About</a>
-			<a href="portfolio.html" target="_blank">Portfolio</a>
-			<a href="contact.html" target="_blank">Contact</a>
-<!-- picture-->
+
+	<section id="menu">		
+		<!--little thingy-->
+
+		<a href= "index.html" class="button">About</a>
+		<a href="portfolio.html" class="button">Portfolio</a>
+		<a href="contact.html" class="button">Contact</a>
+	
+	</section>
+</div>
+
+
+
+
+<section id="main-bio" >
+		<!-- picture-->
+
 		<h3>ABOUT ME</h3>
-			<img src="assets/images/This Picture here.jpg">
-		<br>	
+			<img src="assets/images/This Picture here.jpg" id="bio-img">
+		
 			
-<!-- profile-->		
+		<!-- profile-->		
 			<p> This is me writing a paragrah about myself. According to writingcenter.unc.edu, I just need fives sentences to make a paragraph. By doing this research I am making it fun and it shows personality. This is only a dummy paragraph, I intend on changing it when I am one hundred percent certain this will work. This is the paragrah's last sentence!!!</p>
-			
+
+</section>			
 <!-- connect-->			
+		
+<section id="connect">
 		<h3>CONNECT WITH ME</h3>	
 
-			<a href="#" target="_blank"><img src="assets/images/_Google-128.png">
+				<a href="#"><img src="assets/images/_github-128.png" id="social-icon"></a>
 
-			<a href="#" target="_blank"><img src="assets/images/online_social_media_chrome-128.png">
+			<a href="#"><img src="assets/images/_linkedin-128.png" id="social-icon"></a>
 
-			<a href="#" target="_black"><img src="assets/images/line_color_mix-79-128.png">
+			<a href="#"><img src="assets/images/_youtube-128.png"  id="social-icon"></a>
+		
+</section>
 
 
 	</body>
